--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="_5">5</string>
     <string name="please_input_the_severity_of_hallway_congestion_1_is_lowest_5_is_highest">Please input the severity of hallway congestion(1 is lowest, 5 is highest)</string>
     <string name="submit">SUBMIT</string>
+    <string name="find_route">Find Route</string>
 </resources>
